--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "A JavaScript implementation of an algorithm about cooking potatos 😋",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "Solanum tuberosum and contributors",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
+  },
+  "dependencies": {}
 }
