--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
 
         - name: Create release
           uses: elgohr/Github-Release-Action@master
-            env:
-              GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-            with:
-              args: Release made by Github Action, SHA of this release ${{ github.GITHUB_SHA }}
+          env:
+            GITHUB_TOKEN: ${{ github.GITHUB_TOKEN }}
+          with:
+            args: Release made by Github Action, SHA of this release ${{ github.GITHUB_SHA }}
