--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - name: Download project
-        - uses: actions/checkout@v2
+          uses: actions/checkout@v2
 
         - name: Setup Node
           uses: actions/setup-node@v2
