--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,4 +24,4 @@ jobs:
           env:
             GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
           with:
-            args: Release made by Github Action, SHA of this release ${{ github.GITHUB_SHA }}
+            args: "New Release" "main" "Release made by Github Action, SHA of this release ${{ github.GITHUB_SHA }}"
